[package]
name = "nullnet-user"
description.workspace = true
authors.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
aya = "0.13"
nullnet-common = { path = "../nullnet-common" }
libc = "0.2"
mio = { version = "1", features = ["os-poll", "os-ext"] }
log = "0.4"
pcap = "2.3.0"
#tokio = { version = "1.35.1", features = ["net", "sync", "rt-multi-thread", "macros", "io-util", "time"] }
tun = "0.8.4"
